<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/bf_bepnhaxuquang"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tx_namefood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_b_p_nh_x_qu_ng"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dishname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_c_m_s_n"
            android:textColor="#A30E0E"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ratingvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt__4_4"
                android:textColor="#FFC107"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="#FFC107"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_ratingcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_100"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt__16_tr_n_cao_v_n_p_a_kao_q1_tp_hcm" />
    </LinearLayout>
</TableRow>