<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/banner"
            tools:ignore="ContentDescription" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_b_n_c_n_u_i_g"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:text="@string/txt_xem_t_t_c"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/needs"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_h_m_nay_n_g"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/img_ansang"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/breakfast_menu"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_trua"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/lunch_menu"
                tools:ignore="ContentDescription" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/dinner_1_menu"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/dinner_2_menu"
                tools:ignore="ContentDescription" />
        </TableRow>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:background="@drawable/advertise_1" />
    </LinearLayout>
</ScrollView>